# api

./: Dockerfile  README.md  example.env  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  python-app.yml
app/: main.py
test/: test_api.py
