[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]